--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -22,7 +22,7 @@
                 <select id="meal_course" name="meal_course" class="grey-text text-darken-2">
                     <option class="filter-dropdown grey-text text-darken-2" value="all">All</option>
                 {% for meals in meal_course_types %}
-                    <option value="{{meals._id}}">{{meals.meal_course_type}}</option>
+                    <option value="{{meals._id}}">{{meals.meal_course_type.title()}}</option>
                 {% endfor %}
                 </select>
             </div>
@@ -31,7 +31,7 @@
                 <select id="cuisine" name="cuisine" class="grey-text text-darken-2">
                     <option class="filter-dropdown grey-text text-darken-2" value="all">All</option>
                 {% for cuis in cuisines %}
-                    <option value="{{cuis._id}}">{{cuis.cuisine}}</option>
+                    <option value="{{cuis._id}}">{{cuis.cuisine.title()}}</option>
                 {% endfor %}
                 </select>
             </div>
@@ -51,13 +51,13 @@
                         <div class="col s3">
                             {% for meal_course_type in meal_course_types %}
                                 {% if recipe.meal_course_type|string == meal_course_type["_id"]|string %}
-                                    {{meal_course_type['meal_course_type']}}
+                                    {{meal_course_type['meal_course_type'].title()}}
                                 {% endif %}
                             {% endfor %}
                             <span class="yellow-text text-darken-1">|</span>
                             {% for cuisine in cuisines %}
                                 {% if recipe.cuisine|string == cuisine["_id"]|string %}
-                                    {{cuisine['cuisine']}}
+                                    {{cuisine['cuisine'].title()}}
                                 {% endif %}
                             {% endfor %}
                         </div>
