--- a/templates/viewrecipe.html
+++ b/templates/viewrecipe.html
@@ -16,10 +16,10 @@
 
 		<div class="row">
                 <div class="col s6 m6 l3">
-                        <i class="material-icons prefix">restaurant</i><span class="info-col">{{meal_course_type}}</span>
+                        <i class="material-icons prefix">restaurant</i><span class="info-col">{{meal_course_type.title()}}</span>
                 </div>
                 <div class="col s6 m6 l3">
-                        <i class="material-icons prefix">fastfood</i><span class="info-col">{{cuisine}}</span>
+                        <i class="material-icons prefix">fastfood</i><span class="info-col">{{cuisine.title()}}</span>
                 </div>
                 <div class="col s6 m6 l3">
                         <i class="material-icons prefix">people_outline</i><span class="info-col"> Serves {{recipe.serves}}</span>
