tidy up code, add comments and remove unused images

--- a/templates/addcategory.html
+++ b/templates/addcategory.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
 
+<!--******** PAGE HEADER ********-->
 <div class="container">
 <h3 class="page-head">Add Category</h3>
 
+<!--******** ADD MEALS & COURSES CATEGORY FORM ********-->
 <h5>Meals and Courses</h5>
 
 <div class="row">
@@ -23,6 +25,7 @@
 	</form>
 </div>
 
+<!--******** ADD CUISINES CATEGORY FORM ********-->
 <h5>Cuisines</h5>
 
 <div class="row">
