--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
 
+<!--******** PAGE HEADER ********-->
 <div class="container">
 <h3 class="page-head">Add Recipe</h3>
 
+<!--******** ADD RECIPE FORM ********-->
 <div class="row">
 	<form action="{{ url_for('insert_recipe') }}" method="POST" class="col s12 add-recipe-form" enctype="multipart/form-data">
 
