--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 
+<!--******** PAGE HEADER ********-->
+
 <div class="container">
 <h3 class="page-head">Categories</h3>
 
@@ -12,6 +14,7 @@
 
 <div class="row">
 
+    <!--******** MEALS & COURSES CATEGORY RESULTS ********-->
 	<div class="col s12 m6">
 		<h5 class="cat-header">Meals and Courses</h5>
 
@@ -37,6 +40,7 @@
 		</ul>
 	</div>
 
+    <!--******** CUISINES CATEGORY RESULTS ********-->
 	<div class="col s12 m6">
 		<h5 class="cat-header">Cuisines</h5>
 
