--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,8 @@
 <body>
 
 	<header>
+    <!--******** NAVBAR ********-->
+
             <!-- Dropdown Structure -->
             <ul id="dropdown1" class="dropdown-content">
                 <li><a class="grey lighten-2 grey-text text-darken-2" href="{{url_for('get_recipes')}}">Discover Recipes</a></li>
@@ -56,8 +58,8 @@
                 <li><a href="{{url_for('tips_technique')}}">Tips & Techniques</a></li>
             </ul>
 
+    <!--******** Display messages pushed with 'flash()' ********-->
 
-            <!-- Display messages pushed with 'flash()' -->
             {% with messages = get_flashed_messages() %}
                 {% if messages %}
                     
@@ -80,6 +82,8 @@
 		{% endblock %}
 	
     </main>
+
+    <!--******** FOOTER ********-->
 
 	<footer class="page-footer grey darken-2">
 		<div class="container">
@@ -110,6 +114,7 @@
 		</div>
 	</footer>
 
+    <!--******** JQUERY INITIALIZATION FOR MATERIALIZE ********-->
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
