--- a/templates/editmealcat.html
+++ b/templates/editmealcat.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
 
+<!--******** PAGE HEADER ********-->
 <div class="container">
 <h3 class="page-head">Edit Category</h3>
 
 <h5>Meals and Courses</h5>
 
+<!--******** EDIT MEALS & COURSES CATEGORY FORM ********-->
 <div class="row">
 	<form action="{{ url_for('update_meal', meal_id=meal._id) }}" method="POST" class="col s12">
 
