add and style validate class and required attribute to Select menus

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -212,6 +212,10 @@ ul.dropdown-content.select-dropdown li span {
      background-color: #fdd835;
 }
 
+.select-wrapper span.caret {
+    bottom: auto;
+}
+
 .lever {
     margin-left: 0px !important;
 }
