--- a/templates/base.html
+++ b/templates/base.html
@@ -121,13 +121,15 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 	<script>
 		$(document).ready(function(){
-            $('.collapsible').collapsible();
-            $('select').material_select();
             $(".dropdown-button").dropdown();
             $(".button-collapse").sideNav();
             $('.parallax').parallax();
             $('.carousel').carousel();
+            $('.collapsible').collapsible();
             $('.modal').modal();
+            $('select').material_select();
+            // for HTML5 "required" attribute
+            $("select[required]").css({display: "inline",  position: 'absolute', float: 'right', height: 0, padding: 0, width: 0, top: '2em', left: '3em'});
         });
 	</script>
     
