adjust css style of required attribute

--- a/templates/base.html
+++ b/templates/base.html
@@ -129,7 +129,7 @@
             $('.modal').modal();
             $('select').material_select();
             // for HTML5 "required" attribute
-            $("select[required]").css({display: "inline",  position: 'absolute', float: 'right', visibility: 'hidden', height: 0, padding: 0, width: 0, top: '2em', left: '3em'});
+            $("select[required]").css({display: "inline",  position: 'absolute', float: 'right', height: 0, padding: 0, width: 0, top: '1em', left: '12em'});
         });
 	</script>
     
