--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,6 +20,11 @@ body {
     letter-spacing: 1px;
 }
 
+.dropdown-content li:hover, .dropdown-content li.active, .dropdown-content li.selected {
+     border: 2px solid #fdd835;
+     background-color: #fdd835;
+}
+
 /*------------Flash Messages-----------*/
 
 .card-panel {
@@ -204,17 +209,36 @@ ul.dropdown-content.select-dropdown li span {
 @media (max-width: 575.98px) {
     .img-path {
     margin-left: 2.5rem;
-}
-}
-
-.dropdown-content li:hover, .dropdown-content li.active, .dropdown-content li.selected {
-     border: 2px solid #fdd835;
-     background-color: #fdd835;
+    }
 }
 
-.select-wrapper span.caret {
-    bottom: auto;
+select.browser-default {
+    position: static;
+    pointer-events: all;
+    opacity: 1;
+    background-color: #eeeeee !important;
+    width: calc(100% - 3rem) !important;
+    margin-left: 3rem !important;
+    margin-bottom: 20px;
+    padding: 5px 0px !important;
+    outline: #eeeeee !important;
+    border-style: none;
+    border-bottom: 1px solid rgb(158, 158, 158) !important;
+    height: 3rem !important;
+    float: right;
+    -webkit-appearance: none;
+    -moz-appearance:    none;
+    appearance:         none;   
+    -webkit-border-radius: 0;  /* Safari 3-4, iOS 1-3.2, Android 1.6- */    
+    -moz-border-radius: 0;  /* Firefox 1-3.6 */     
+    border-radius: 0;  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
 }
+
+select:focus {
+    outline: #eeeeee !important;
+    border-bottom: 1px solid #fdd835 !important;
+}
+
 
 .lever {
     margin-left: 0px !important;
@@ -226,6 +250,10 @@ ul.dropdown-content.select-dropdown li span {
 
 .lever::after {
     background: #fdd835 !important;
+}
+
+.input-field {
+    height: 64.5px;
 }
 
 .input-field .prefix.active {
