add content and fix typos in README.md

--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -34,7 +34,8 @@
         </div>
 
         <div class="row">
-            <div class="input-field col s12 m6 l3"><i class="material-icons prefix">restaurant</i>
+            <div class="input-field col s12 m6 l3">
+                <i class="material-icons prefix">restaurant</i>
                 <select id="meals_courses" name="meal_course_type" class="browser-default validate" required>
                     <option value="" disabled selected>Mealtimes & Courses</option>
                 {% for meals in meals_courses %}
