--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 <!--******** IMAGE ********-->
 <div class="parallax-container">
-	<div class="parallax"><img src="{{ url_for('static', filename='images/uploads/deeelish-cover.jpg') }}"></div>
+	<div class="parallax"><img src="{{ url_for('static', filename='images/deeelish-cover.jpg') }}"></div>
 </div>
 
 <!--******** ABOUT SECTION ********-->
@@ -41,7 +41,7 @@
 
 <!--******** IMAGE ********-->
 <div class="parallax-container">
-    <div class="parallax"><img src="{{ url_for('static', filename='images/uploads/banana-bread.jpg') }}"></div>
+    <div class="parallax"><img src="{{ url_for('static', filename='images/banana-bread.jpg') }}"></div>
 </div>
 
 <!--******** FEATURED RECIPES ********-->
@@ -52,19 +52,19 @@
         <div class="row">
             <div class="carousel">
                 <a class="carousel-item"
-						href="{{url_for('view_recipe', recipe_id='5e7f6ba62c2a25ef5bf9903f')}}"><img src="{{ url_for('static', filename='images/uploads/HotCrossBuns.jpg') }}"></a>
+						href="{{url_for('view_recipe', recipe_id='5e7f6ba62c2a25ef5bf9903f')}}"><img src="{{ url_for('static', filename='images/HotCrossBuns.jpg') }}"></a>
                     <a class="carousel-item"
-                        href="{{url_for('view_recipe', recipe_id='5e7f7128c814a57c303ee2f0')}}"><img src="{{ url_for('static', filename='images/uploads/MarbledEgg.jpg') }}"></a>
+                        href="{{url_for('view_recipe', recipe_id='5e7f7128c814a57c303ee2f0')}}"><img src="{{ url_for('static', filename='images/MarbledEgg.jpg') }}"></a>
                         <a class="carousel-item"
-                            href="{{url_for('view_recipe', recipe_id='5e7f74ebc814a57c303ee2f2')}}"><img src="{{ url_for('static', filename='images/uploads/healthy-easter-lamb.jpg') }}"></a>
+                            href="{{url_for('view_recipe', recipe_id='5e7f74ebc814a57c303ee2f2')}}"><img src="{{ url_for('static', filename='images/healthy-easter-lamb.jpg') }}"></a>
                             <a class="carousel-item"
-                                href="{{url_for('view_recipe', recipe_id='5e7f76dac814a57c303ee2f4')}}"><img src="{{ url_for('static', filename='images/uploads/easter-nest-cake.jpg') }}"></a>
+                                href="{{url_for('view_recipe', recipe_id='5e7f76dac814a57c303ee2f4')}}"><img src="{{ url_for('static', filename='images/easter-nest-cake.jpg') }}"></a>
                                 <a class="carousel-item"
-                                    href="{{url_for('view_recipe', recipe_id='5e7fba6ee13678197962ff96')}}"><img src="{{ url_for('static', filename='images/uploads/simnel-cake.jpg') }}"></a>
+                                    href="{{url_for('view_recipe', recipe_id='5e7fba6ee13678197962ff96')}}"><img src="{{ url_for('static', filename='images/simnel-cake.jpg') }}"></a>
                                     <a class="carousel-item"
-                                        href="{{url_for('view_recipe', recipe_id='5e7fc1dde13678197962ff98')}}"><img src="{{ url_for('static', filename='images/uploads/easter-egg-rocky-road.jpg') }}"></a>
+                                        href="{{url_for('view_recipe', recipe_id='5e7fc1dde13678197962ff98')}}"><img src="{{ url_for('static', filename='images/easter-egg-rocky-road.jpg') }}"></a>
                                         <a class="carousel-item"
-                                            href="{{url_for('view_recipe', recipe_id='5e8073b7fe17ddf4e49f3f07')}}"><img src="{{ url_for('static', filename='images/uploads/iced-easter-biscuits.jpg') }}"></a>
+                                            href="{{url_for('view_recipe', recipe_id='5e8073b7fe17ddf4e49f3f07')}}"><img src="{{ url_for('static', filename='images/iced-easter-biscuits.jpg') }}"></a>
             </div>
         </div>
     </div>
@@ -72,7 +72,7 @@
 
 <!--******** IMAGE ********-->
 <div class="parallax-container">
-    <div class="parallax"><img src="{{ url_for('static', filename='images/uploads/meringue-next-cheesecake.jpg') }}"></div>
+    <div class="parallax"><img src="{{ url_for('static', filename='images/meringue-next-cheesecake.jpg') }}"></div>
 </div>
 
 		{% endblock %}
