--- a/templates/tips.html
+++ b/templates/tips.html
@@ -3,7 +3,7 @@
 
 <!--******** IMAGE ********-->
 <div class="parallax-container">
-	<div class="parallax"><img src="{{ url_for('static', filename='images/uploads/deeelish-cover.jpg') }}"></div>
+	<div class="parallax"><img src="{{ url_for('static', filename='images/deeelish-cover.jpg') }}"></div>
 </div>
 
 <!--******** TIPS SECTION ********-->
@@ -16,7 +16,7 @@
         <div class="col s12 m4 l4 tip-col">
             <div class="card tip-card hoverable grey lighten-5">
                 <div class="card-image">
-                    <img src="{{ url_for('static', filename='images/uploads/cake-tins.jpg') }}">
+                    <img src="{{ url_for('static', filename='images/cake-tins.jpg') }}">
                 </div>
                 <div class="card-content tip-content grey-text text-darken-2">
                     <span class="card-title">
@@ -28,7 +28,7 @@
         <div class="col s12 m4 l4 tip-col">
             <div class="card tip-card hoverable grey lighten-5">
                 <div class="card-image">
-                    <img src="{{ url_for('static', filename='images/uploads/oven.jpg') }}">
+                    <img src="{{ url_for('static', filename='images/oven.jpg') }}">
                 </div>
                 <div class="card-content tip-content grey-text text-darken-2">
                     <span class="card-title">
@@ -40,7 +40,7 @@
         <div class="col s12 m4 l4 tip-col">
             <div class="card tip-card hoverable grey lighten-5">
                 <div class="card-image">
-                    <img src="{{ url_for('static', filename='images/uploads/roast.jpg') }}">
+                    <img src="{{ url_for('static', filename='images/roast.jpg') }}">
                 </div>
                 <div class="card-content tip-content grey-text text-darken-2">
                     <span class="card-title">
@@ -54,7 +54,7 @@
 
 <!--******** IMAGE ********-->
 <div class="parallax-container">
-    <div class="parallax"><img src="{{ url_for('static', filename='images/uploads/chicken-tikka-pizzas.jpg') }}"></div>
+    <div class="parallax"><img src="{{ url_for('static', filename='images/chicken-tikka-pizzas.jpg') }}"></div>
 </div>
 
 <!--******** TECHNIQUES SECTION ********-->
@@ -95,7 +95,7 @@
 <!--******** IMAGE ********-->
 <div class="parallax-container">
     <div class="parallax">
-        <img src="{{ url_for('static', filename='images/uploads/crispy-falafel.jpg') }}">
+        <img src="{{ url_for('static', filename='images/crispy-falafel.jpg') }}">
     </div>
 </div>
 
